--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: charlinds.github.io
 title: Charlotte A. Lindsay
 email: cal285@georgetown.edu
-author: Wharlotte Anne Lindsay
+author: Charlotte Anne Lindsay
 description: > # "Personal Page"
 
 # ----------------------- #
